--- a/P010332.opf/meta.yml
+++ b/P010332.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010332
+id: P010332
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN7747
   title: བོད་ཀྱི་དག་ཡིག
-  volume: ''
   author: ''
+  volumes: {}
