--- a/P010332.opf/layers/v001/Pagination.yml
+++ b/P010332.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b4a3ee4465c046c0a186a7d17a5436c6
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   c73d89e25e4741d8b9ced7ac373c297f:
